tests/errors/module_used_as_ty_err/module_used_as_ty_err.c
#error module_used_as_ty_err:8:8 The name 'sub' here should denote to some type; but is a module name.
#error module_used_as_ty_err:8:16 The name 'failwith' here should denote to some value; but not found.
